# spike-janus-databricks-sdlc

./: README.md  layouts.md
flat_style/: README.md  pyproject.toml
flat_style/flat_style/: __init__.py
flat_style/flat_style/pipelines/: __init__.py
flat_style/flat_style/pipelines/retro_encabulator/: __init__.py
flat_style/flat_style/pipelines/retro_encabulator/instruments/: __init__.py  unilateral_phase_detractor.py
flat_style/flat_style/pipelines/retro_encabulator/notebooks/: demo.ipynb
src_style/: README.md  pyproject.toml
src_style/src/src_style/pipelines/retro_encabulator/instruments/: unilateral_phase_detractor.py
src_style/src/src_style/pipelines/retro_encabulator/notebooks/: demo.ipynb
