[project]
name = "flat-style"
version = "0.1.0"
description = "Flat-layout Databricks Git-folder import example"
authors = [
    {name = "Andrew Parsons", email = "andrew.parsons@janus-ai.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
packages = [{include = "flat_style"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
