[project]
name = "src-style"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Parsons",email = "andrew.parsons@janus-ai.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "src_style", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
